[metadata]
name = pyvism
version = 1.0.0
description = Python implementation of the esoteric programming language Vism.
long_description = file: README.md
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.11
packages = find:
package_dir=
    =src
